# sew_backend

./: README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: backend_pre_start.py  main.py  tests_pre_start.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: cmd.py  login.py  users.py
backend/app/core/: config.py  db.py
backend/app/crud/: user.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_users.py
